[gd_scene load_steps=4 format=3 uid="uid://2v3msm41kp16"]

[ext_resource type="Script" path="res://Camera2D.gd" id="1_4xuqo"]
[ext_resource type="Script" path="res://scripts/player_debug_hud.gd" id="2_bvgga"]
[ext_resource type="LabelSettings" uid="uid://cds1nk0736cs4" path="res://project_system_files/label_debug_settings.tres" id="3_qjuc7"]

[node name="Camera2D" type="Camera2D"]
script = ExtResource("1_4xuqo")

[node name="Debug_HUD" type="CanvasLayer" parent="."]
follow_viewport_enabled = true
script = ExtResource("2_bvgga")

[node name="positionX" type="Label" parent="Debug_HUD"]
offset_right = 40.0
offset_bottom = 23.0
text = "X: -"
label_settings = ExtResource("3_qjuc7")
metadata/_edit_use_anchors_ = true

[node name="positionY" type="Label" parent="Debug_HUD"]
offset_left = 40.0
offset_right = 80.0
offset_bottom = 23.0
text = "Y: -"
label_settings = ExtResource("3_qjuc7")
metadata/_edit_use_anchors_ = true

[node name="state_label" type="Label" parent="Debug_HUD"]
offset_top = 16.0
offset_right = 40.0
offset_bottom = 39.0
text = "STATE: "
label_settings = ExtResource("3_qjuc7")
metadata/_edit_use_anchors_ = true

[node name="stateTime" type="Label" parent="Debug_HUD"]
offset_top = 32.0
offset_right = 49.0
offset_bottom = 55.0
text = "STATE TIME: "
label_settings = ExtResource("3_qjuc7")
metadata/_edit_use_anchors_ = true
